--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     </figure>
 
     <figure>
-        <img src="images/screenshot-demo.png" alt="">
+        <img src="images/中国各省市区人均GDP历年排名变化.gif" alt="">
         <figcaption>
             Sometimes, the caption can be very long which is a standalone story by itself. So you don't have to put the entire block into emphasis mode. Just <em>emaphsize the part you find most important</em>.
         </figcaption>
