--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 <body>
     <cover-image>
-      <img src="https://f11.baidu.com/it/u=4178931547,683084816&amp;fm=173&amp;app=49&amp;f=PNG?w=554&amp;h=412&amp;s=3D18AB5E0A21468CC06865F30300C022&amp;access=215967316" data-index="0" onload="">
+      <img src="timg.jpeg" data-index="0" onload="">
         
         <h1>
             LIPSTICK EFFECT
