--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <img src="timg.jpeg" data-index="0" onload="">
         
         <h1>
-            LIPSTICK EFFECT
+            The Hardest Nut to Crack
         </h1>
         <author-block>
             <em>By</em>
